the carousel feature is fixed so each slide appears one at a time without any of them running behind or in front of each other.

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -138,18 +138,6 @@ main{
     padding:10px;
 }
 
-/* #nav-grid{
-    position: relative;
-    height:180px;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: repeat(4, 200px);
-    gap:30px;
-    align-items: center;
-}
- */
-
  #nav-grid{
     transition: all .5s;
     position: relative;
